fix(PC-17): fix slider component on narrow screens

--- a/src/components/ProductSlider/ProductSlider.module.scss
+++ b/src/components/ProductSlider/ProductSlider.module.scss
@@ -27,6 +27,18 @@
   }
 }
 
+.swiper {
+  width: 237px;
+
+  @include on-tablet {
+    width: 212;
+  }
+
+  @include on-desktop {
+    width: 272;
+  }
+}
+
 .div :global(.swiper-slide) {
   height: auto;
   display: flex;
