--- a/src/components/common/ProductCard/ProductCard.module.scss
+++ b/src/components/common/ProductCard/ProductCard.module.scss
@@ -6,10 +6,6 @@
   padding: 32px;
   width: 100%;
   border: 1px solid #e2e6e9;
-
-  @include on-tablet {
-    width: 272px;
-  }
 }
 
 .image {
