--- a/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
+++ b/src/modules/HomePage/components/ShopByCategory/ShopByCategory.module.scss
@@ -7,7 +7,6 @@
 .categories {
   margin-top: 24px;
 
-  display: grid;
   gap: 32px;
 }
 
